# StudentBudgetTracker

./: .gitignore  OfflineBudgetTracker.spec  Open Offline Budget Tracker.bat  README.md  __init__.py  app_state.py  build_windows.ps1  calculations.py  charts.py  db.py  importer.py  index.html  localization.py  main.py  package.json  pnpm-lock.yaml  reports.py  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: windows-release.yml
android_app/: .gitignore  README.md  build.gradle.kts  local.properties.example  settings.gradle.kts  setup_android_toolchain.ps1
android_app/app/: build.gradle.kts
e2e-tests/: wdio.conf.mjs
e2e-tests/scripts/: prepare-e2e-data.py  run-windows-e2e-suite.ps1  run-windows-e2e.ps1
e2e-tests/specs/: backup-undo.e2e.mjs  desktop-smoke.e2e.mjs  helpers.mjs  legacy-migration.e2e.mjs  recovery.e2e.mjs  recurring-catchup.e2e.mjs
scripts/: diagnose_sync.ps1  validate-real-legacy-migration.ps1
src/: App.module.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/tests/fixtures/: legacy_budget_fixture.sql  legacy_import_mixed.json
src/components/: BarChart.tsx  Card.module.css  Charts.module.css  Dialog.module.css  EntryDialog.test.tsx  EntryDialog.tsx  LineChart.tsx  MetricCard.tsx  MissedRecurringBanner.module.css  MissedRecurringBanner.test.tsx  MissedRecurringBanner.tsx  MonthlyTotalsChart.tsx  Sidebar.tsx  (+6 more)
tests/: test_calculations.py  test_charts.py  test_importer_safety.py  test_localization.py
(+31 files in other folders)
