[package]
name = "student-budget-tracker"
version = "0.1.12"
description = "Student budget tracker desktop rebuild"
authors = ["Mouzzia"]
edition = "2021"

[lib]
name = "student_budget_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
if-addrs = "0.15.0"
notify = "6.1.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
